messages/[delete] message or reply

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -591,23 +591,18 @@ label.valid {
 
 
 
-    
-.comment-wrapper .panel-body {
-  max-height:650px;
-  overflow:auto;
-}
-
-.comment-wrapper .media-list .media img {
-  width:64px;
-  height:64px;
-  border:2px solid #e5e7e8;
-}
-
-.comment-wrapper .media-list .media {
-  border-bottom:1px dashed #efefef;
-  margin-bottom:25px;
-}
 /*# sourceMappingURL=style.css.map */
 .card-inner{
   margin-left: 4rem;
+}
+
+.message-header {
+  position: relative;
+}
+
+
+.actions {
+  position: absolute !important;
+  top: 0px;
+  right: 0px;
 }
